# dot-agent

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/dot-agent-cli/: Cargo.toml
crates/dot-agent-cli/src/: args.rs  gui.rs  main.rs
crates/dot-agent-core/: Cargo.toml
crates/dot-agent-core/src/: config.rs  error.rs  installer.rs  lib.rs  llm.rs  metadata.rs  platform.rs  plugin_manifest.rs  plugin_registrar.rs  profile.rs  profile_metadata.rs  rule.rs  snapshot.rs
crates/dot-agent-core/src/category/: builtin.rs  classifier.rs  mod.rs  store.rs
crates/dot-agent-core/src/channel/: channel_registry.rs  hub_registry.rs  mod.rs  search.rs  types.rs
crates/dot-agent-core/src/history/: checkpoint.rs  delta.rs  graph.rs  manager.rs  mod.rs  operation.rs  pack.rs
crates/dot-agent-core/src/install/: json_merge.rs  mod.rs  snapshot.rs
crates/dot-agent-core/src/plugin/: fetcher.rs  installer.rs  marketplace.rs  mod.rs  publisher.rs  registrar.rs  registry.rs  types.rs
crates/dot-agent-core/src/profile/: fusion.rs  metadata.rs  mod.rs
crates/dot-agent-mcp/: Cargo.toml
crates/dot-agent-mcp/src/: main.rs
crates/dot-agent-mcp/src/mcp/: server.rs
docs/design/: claude-plugin-integration.md  redesign-v2.md
