[package]
name = "dot-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for dot-agent profile management"
readme = "../../README.md"

[dependencies]
chrono.workspace = true
dirs.workspace = true
glob.workspace = true
hex.workspace = true
once_cell = "1.21"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid = { version = "1.11", features = ["v4"] }
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
